--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BishkekRielt"
         android:name=".BishkekRieltApp">
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".ui.splash.SplashScreenActivity"
+            android:theme="@style/Theme.BishkekRielt.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
